# TOTPVault

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  test.py
commands/: index.html
docs/: commands.md  getting-started.md  hardware.md  index.md  system-design.md  updating-firmware.md
docs/stylesheets/: extra.css
getting-started/: index.html
hardware/: index.html
images/: breakout.drawio
search/: search_index.json
src/: comm.rs  credential.rs  crypto.rs  main.rs
stylesheets/: extra.css
system-design/: index.html
totpvault-cli/: Cargo.toml  mkdocs.yml
totpvault-cli/docs/: commands.md  getting-started.md  index.md  system-design.md
totpvault-cli/src/: comm.rs  dev.rs  main.rs  tests.rs  totpvault_comm.rs  totpvault_dev.rs
totpvault-firmware/: Cargo.toml  Justfile  manage.sh  partition_table.csv  rust-toolchain.toml  sdkconfig.defaults  test.py
totpvault-firmware/.cargo/: config.toml
totpvault-firmware/src/: credential.rs  crypto.rs  main.rs  storage.rs
totpvault-gui/: Cargo.toml  build.rs
totpvault-gui/data/: icons.gresource.xml
totpvault-gui/src/: dev.rs  main.rs  style.css  totpvault_dev.rs
totpvault-hardware/: totpvault-hardware.kicad_pcb  totpvault-hardware.kicad_pro  totpvault-hardware.kicad_sch
totpvault-hardware/usba-connector/: usba-connector.kicad_pcb  usba-connector.kicad_prl  usba-connector.kicad_pro  usba-connector.kicad_sch
totpvault-hardware/usba-connector/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
totpvault-hardware/usbc-connector/: totpvault-hardware.kicad_pcb  totpvault-hardware.kicad_prl  totpvault-hardware.kicad_sch
totpvault-lib/: Cargo.toml
totpvault-lib/src/: lib.rs  totpvault_dev.rs
updating-firmware/: index.html
