[package]
name = "totpvault-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
rpassword = "7.3.1"
totpvault-lib = { path = "../totpvault-lib" }
zeroize = { version = "1.8.1", features = ["derive", "std"] }
env_logger = "0.11.6"
log = "0.4.25"
