[package]
name = "totpvault-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
rpassword = "7.3.1"
totpvault-lib = { path = "../totpvault-lib" }
zeroize = { version = "1.8.1", features = ["derive", "std"] }
env_logger = "0.11.6"
log = "0.4.25"
hex = "0.4.3"
serialport = "4.7.0"
base64 = "0.22.1"
chrono = "0.4.39"
rmp-serde = "1.3.0"
serde = "1.0.217"
sha2 = "0.10.8"
rand_latest = { package="rand", version="0.9.0" }
rand_older = { package="rand", version="0.8.5" }
ed25519-dalek = { version = "2.1.1", features = ["asm", "signature", "rand_core"] }
totp-rs = { version = "5.6.0", features = ["rand", "gen_secret"] }
