[package]
name = "totpvault-firmware"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Grant Foudree <gfoudree@protonmail.com>"]

[[bin]]
name = "totpvault-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49.1", default-features = false }
zeroize = "1.8.1"
rand = "0.8.5"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
crc = "3.2.1"
totp-rs = "5.6.0"
chacha20poly1305 = "0.10.1"
bincode = "1.3.3"
subtle = "2.6.1"
data-encoding = "2.6.0"
serde = { version = "1.0.210", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "now"] }
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
esp-idf-sys = "0.35.0"
rmp-serde = "1.3.0"
base64 = "0.22.1"
hex = "0.4.3"
totpvault-lib = { path = "../totpvault-lib" }

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released