[package]
name = "totpvault-firmware"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Grant Foudree <gfoudree@protonmail.com>"]

[[bin]]
name = "totpvault-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = 2
lto = "fat"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []



[dependencies]
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
zeroize = "1.8.1"
rand = "0.8.5"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
totp-rs = "5.6.0"
bincode = "1.3.3"
subtle = "2.6.1"
serde = { version = "1.0.210", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "now"] }
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
esp-idf-sys = "0.36.1"
rmp-serde = "1.3.0"
base64 = "0.22.1"
hex = "0.4.3"
totpvault-lib = { path = "../totpvault-lib" }
embassy-time = { version = "0.4.0", features = ["generic-queue-64"] }
log = "0.4.26"

[build-dependencies]
embuild = "0.33.0"
#cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
