[package]
name = "totpvault-gui"
version = "0.1.0"
edition = "2021"
authors = ["Grant Foudree <gfoudree@protonmail.com>"]

[dependencies]
relm4 = "0.9.1"
relm4-components = "0.9.1"
serialport = "4.0"

totpvault-lib = { path = "../totpvault-lib" }
env_logger = "0.11.5"
log = "0.4.22"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
chrono = "0.4.39"

[build-dependencies]
glib-build-tools = "0.17.10"
