[package]
name = "totpvault-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
data-encoding = "2.6.0"
hex = "0.4.3"
log = "0.4.25"
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["derive"] }
serialport = "4.7.0"
sha2 = { version = "0.10.8" }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[lib]
path = "src/lib.rs"
