[package]
name = "totpvault-lib"
version = "0.1.1"
edition = "2021"

[dependencies]
data-encoding = "2.6.0"
serde = { version = "1.0.215", features = ["derive"] }
totp-rs = { version = "5.6.0", features = ["zeroize"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
log = "0.4.25"

[lib]
path = "src/lib.rs"
